; ModuleID = '/home/carl/AnghaBench/mimikatz/mimidrv/extr_kkll_m_modules.c_kkll_m_modules_enum.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimidrv/extr_kkll_m_modules.c_kkll_m_modules_enum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATUS_SUCCESS = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8
@PagedPool = common dso_local global i32 0, align 4
@POOL_TAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kkll_m_modules_enum(i32 %0, i32 %1, i32 %2, i32 (i32, i32, i32, i32*, i32, i64*)* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32 (i32, i32, i32, i32*, i32, i64*)*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 (i32, i32, i32, i32*, i32, i64*)* %3, i32 (i32, i32, i32, i32*, i32, i64*)** %9, align 8
  store i32 %4, i32* %10, align 4
  %17 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %17, i32* %11, align 4
  %18 = load i64, i64* @TRUE, align 8
  store i64 %18, i64* %16, align 8
  %19 = call i32 @AuxKlibQueryModuleInformation(i32* %13, i32 4, i32* null)
  store i32 %19, i32* %11, align 4
  %20 = load i32, i32* %11, align 4
  %21 = call i64 @NT_SUCCESS(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %72

23:                                               ; preds = %5
  %24 = load i32, i32* %13, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %72

26:                                               ; preds = %23
  %27 = load i32, i32* @PagedPool, align 4
  %28 = load i32, i32* %13, align 4
  %29 = load i32, i32* @POOL_TAG, align 4
  %30 = call i64 @ExAllocatePoolWithTag(i32 %27, i32 %28, i32 %29)
  %31 = inttoptr i64 %30 to i32*
  store i32* %31, i32** %15, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %33, label %71

33:                                               ; preds = %26
  %34 = load i32, i32* %13, align 4
  %35 = sext i32 %34 to i64
  %36 = udiv i64 %35, 4
  %37 = trunc i64 %36 to i32
  store i32 %37, i32* %14, align 4
  %38 = load i32*, i32** %15, align 8
  %39 = call i32 @AuxKlibQueryModuleInformation(i32* %13, i32 4, i32* %38)
  store i32 %39, i32* %11, align 4
  store i32 0, i32* %12, align 4
  br label %40

40:                                               ; preds = %64, %33
  %41 = load i32, i32* %11, align 4
  %42 = call i64 @NT_SUCCESS(i32 %41)
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %51

44:                                               ; preds = %40
  %45 = load i64, i64* %16, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %51

47:                                               ; preds = %44
  %48 = load i32, i32* %12, align 4
  %49 = load i32, i32* %14, align 4
  %50 = icmp slt i32 %48, %49
  br label %51

51:                                               ; preds = %47, %44, %40
  %52 = phi i1 [ false, %44 ], [ false, %40 ], [ %50, %47 ]
  br i1 %52, label %53, label %67

53:                                               ; preds = %51
  %54 = load i32 (i32, i32, i32, i32*, i32, i64*)*, i32 (i32, i32, i32, i32*, i32, i64*)** %9, align 8
  %55 = load i32, i32* %6, align 4
  %56 = load i32, i32* %7, align 4
  %57 = load i32, i32* %8, align 4
  %58 = load i32*, i32** %15, align 8
  %59 = load i32, i32* %12, align 4
  %60 = sext i32 %59 to i64
  %61 = getelementptr inbounds i32, i32* %58, i64 %60
  %62 = load i32, i32* %10, align 4
  %63 = call i32 %54(i32 %55, i32 %56, i32 %57, i32* %61, i32 %62, i64* %16)
  store i32 %63, i32* %11, align 4
  br label %64

64:                                               ; preds = %53
  %65 = load i32, i32* %12, align 4
  %66 = add nsw i32 %65, 1
  store i32 %66, i32* %12, align 4
  br label %40

67:                                               ; preds = %51
  %68 = load i32*, i32** %15, align 8
  %69 = load i32, i32* @POOL_TAG, align 4
  %70 = call i32 @ExFreePoolWithTag(i32* %68, i32 %69)
  br label %71

71:                                               ; preds = %67, %26
  br label %72

72:                                               ; preds = %71, %23, %5
  %73 = load i32, i32* %11, align 4
  ret i32 %73
}

declare dso_local i32 @AuxKlibQueryModuleInformation(i32*, i32, i32*) #1

declare dso_local i64 @NT_SUCCESS(i32) #1

declare dso_local i64 @ExAllocatePoolWithTag(i32, i32, i32) #1

declare dso_local i32 @ExFreePoolWithTag(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
